--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,13 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>★SPACE★</title>
 </head>
 <body>
 	<header th:fragment="header" class="headerBox" id="headerBox">
 		<div class="leftBox">
 			<a href="/">
-				<img src="../images/spaceLogoText.PNG">
+				<img class="logoT" src="../images/spaceLogoText.PNG">
+				<img class="logo" src="../images/spaceLogo.PNG">
 			</a>
 		</div>
 		<div class="rightBox">
