--- a/src/main/resources/static/css/board/boardList.css
+++ b/src/main/resources/static/css/board/boardList.css
@@ -1,5 +1,100 @@
 @charset "UTF-8";
 
+	/* Mobile - Portrait */
+	@media (max-width: 619px) {
+		.title h1 {
+			font-size: 25px;
+		}
+
+		.box div:nth-child(1),
+		.box div:nth-child(2),
+		.box div:nth-child(3) {
+			display: none;	
+		}		
+	}
+	
+	/* Mobile - Landscape */
+	@media (min-width: 620px) and (max-width: 767px) {
+		.box div:nth-child(1),
+		.box div:nth-child(2),
+		.box div:nth-child(3) {
+			display: none;	
+		}		
+	}
+	
+	/* Tablet */
+	@media (min-width: 768px) and (max-width: 991px) {
+		.skillList {
+			height: 40px;
+			margin: 2px 5px;
+		}			
+		
+		.skillbox {
+			height: 30px;
+		}
+				
+		.imgbox {
+			width: 30px;
+			height: 30px;
+			padding: 1px;
+			padding-top: 3px;			
+		}	
+			
+		.skillimage {
+			width: 20px;
+			height: 20px;	
+		}	
+	}
+	
+	/* Desktop */
+	@media (min-width: 992px) and (max-width: 1299px) {
+		.skillList {
+			height: 40px;
+			margin: 5px 10px;
+		}			
+		
+		.skillbox {
+			height: 30px;
+		}
+				
+		.imgbox {
+			width: 30px;
+			height: 30px;
+			padding: 1px;
+			padding-top: 3px;			
+		}	
+			
+		.skillimage {
+			width: 20px;
+			height: 20px;	
+		}	
+	}
+	
+	/* Desktop (Large) */
+	@media (min-width: 1300px) {
+		.skillList {
+			height: 50px;
+			margin: 10px 10px;
+		}	
+	
+		.skillbox {
+			height: 40px;
+		}	
+	
+		.imgbox {
+			width: 40px;
+			height: 40px;
+			padding: 1px;
+			padding-top: 5px;
+		}
+			
+		.skillimage {
+			width: 28px;
+			height: 28px;	
+		}
+	}
+
+
 .box {
 	width: 70%;
 	margin: 0 auto;
@@ -7,6 +102,10 @@
 }
 
 .title {
+	margin: 30px;
+}
+
+.title h1 {
 	text-align: center;
 	width: 100%;
 	height: 50px;
@@ -27,10 +126,8 @@
 .skillList {
 	border: 2px solid silver;
 	width: auto;
-	height: 50px;
 	border-radius: 50px;
 	text-align: center;
-	margin: 15px 15px;
 	padding: 4px 15px;
 	cursor: pointer;
 	opacity: 0.3;
@@ -42,21 +139,14 @@
 	justify-content: center;
 	align-items: center;
 	width: auto;
-	height: 40px;
 }
 
 .imgbox {
 	border: 1.5px solid silver;
 	border-radius: 50px;
-	padding: 1px;
-	padding-top: 5px;
-	width: 40px;
-	height: 40px;
 }
 
 .skillimage {
-	width: 28px;
-	height: 28px;
 	object-fit: contain;	
 }
 
