--- a/src/main/resources/static/css/users/loginSkill.css
+++ b/src/main/resources/static/css/users/loginSkill.css
@@ -1,5 +1,91 @@
 @charset "UTF-8";
 
+	/* Mobile - Portrait */
+	@media (max-width: 619px) {
+		.skillList {
+			padding-left: 5px;
+			padding-right: 5px;
+		}	
+
+		#skillChoiceContainer {
+			width: 100%;
+		}	
+		
+		.select {
+			padding-left: 2px;
+			padding-right: 2px;
+			font-size: 10px;
+			margin: 5px;
+		}
+	}
+	
+	/* Mobile - Landscape */
+	@media (min-width: 620px) and (max-width: 767px) {
+		.skillList {
+			padding-left: 5px;
+			padding-right: 5px;
+		}	
+
+		#skillChoiceContainer {
+			width: 100%;
+		}	
+		
+		.select {
+			padding-left: 2px;
+			padding-right: 2px;
+			width: 80px;
+			font-size: 10px;
+			margin: 5px;
+		}		
+	}
+	
+	/* Tablet */
+	@media (min-width: 768px) and (max-width: 991px) {
+		.skillList {
+			padding-left: 5px;
+			padding-right: 5px;
+		}		
+		
+		#skillChoiceContainer {
+			width: 90%;
+		}		
+		
+		.select {
+			width: 100px;
+			font-size: 14px;
+			margin: 10px;
+		}	
+	}
+	
+	/* Desktop */
+	@media (min-width: 992px) and (max-width: 1299px) {
+		.skillList {
+			width: 150px;
+		}		
+
+		#skillChoiceContainer {
+			width: 80%;
+		}
+		
+		.select {
+			width: 100px;
+			font-size: 14px;
+			margin: 20px;
+		}	
+	}
+	
+	/* Desktop (Large) */
+	@media (min-width: 1300px) {
+		.skillList {
+			width: 150px;
+		}
+		
+		.select {
+			width: 150px;
+			margin: 20px;
+		}
+	}
+
 	.img {
 		width: 80%;
 		margin: 0 auto;
@@ -73,7 +159,6 @@
 	
 	.skillList {
 		border: 1.5px solid #333333;
-		width: 150px;
 		border-radius: 50px;
 		text-align: center;
 		margin: 5px 5px;
@@ -85,7 +170,6 @@
 	
 	#skillChoiceContainer {
 		position: relative;
-		width: 80%;
 		height: 100px;
 		text-align: center;
 		margin: 0 auto;
@@ -95,12 +179,10 @@
 	.select {
 		display: inline-block;
 		border: 1px solid #9966CC;
-		width: 150px;
 		height: 30px;
 		text-align: center;
 		border-radius: 50px;
 		padding-top: 5px;
-		margin: 20px;
 		color: #E6E6FA;
 		background-color: #9966CC;
 	}
