--- a/src/main/resources/templates/users/myInfo.html
+++ b/src/main/resources/templates/users/myInfo.html
@@ -2,10 +2,102 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>★SPACE★</title>
 <link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="../css/header.css">
 <style>
+	/* Mobile - Portrait */
+	@media (max-width: 619px) {
+		.skillList {
+			width: 100px;
+			font-size: 10px;
+		}	
+		
+		#skillChoiceContainer {
+			width: 100%;
+			margin-top: 10px;
+		}	
+		
+		.select {
+			width: 80px;
+			margin: 3px;
+			font-size: 12px;
+		}				
+	}
+	
+	/* Mobile - Landscape */
+	@media (min-width: 620px) and (max-width: 767px) {
+		.skillList {
+			width: 100px;
+			font-size: 12px;
+		}
+
+		#skillChoiceContainer {
+			width: 100%;
+			margin-top: 10px;
+		}	
+
+		.select {
+			width: 100px;
+			margin: 10px;
+			font-size: 12px;
+		}			
+	}
+	
+	/* Tablet */
+	@media (min-width: 768px) and (max-width: 991px) {
+		.skillList {
+			width: 150px;
+		}
+		
+		#skillChoiceContainer {
+			width: 100%;
+			margin-top: 10px;
+		}	
+		
+		.select {
+			width: 100px;
+			margin: 10px;
+			font-size: 12px;
+		}		
+	}
+	
+	/* Desktop */
+	@media (min-width: 992px) and (max-width: 1199px) {
+		.skillList {
+			width: 150px;
+		}
+		
+		#skillChoiceContainer {
+			width: 100%;
+			margin-top: 10px;
+		}	
+		
+		.select {
+			width: 150px;
+			margin: 20px;
+		}		
+	}
+	
+	/* Desktop (Large) */
+	@media (min-width: 1200px) {
+		.skillList {
+			width: 150px;
+		}
+		
+		#skillChoiceContainer {
+			width: 80%;
+			margin: 0 auto;
+			margin-top: 10px;
+		}		
+		
+		.select {
+			width: 150px;
+			margin: 20px;
+		}
+	}
+
 	#section {
 		width: 70%;
 		margin: 0 auto;
@@ -109,7 +201,6 @@
 	
 	.skillList {
 		border: 1.5px solid #333333;
-		width: 150px;
 		border-radius: 50px;
 		text-align: center;
 		margin: 5px 5px;
@@ -121,22 +212,17 @@
 	
 	#skillChoiceContainer {
 		position: relative;
-		width: 80%;
 		height: 100px;
 		text-align: center;
-		margin: 0 auto;
-		margin-top: 10px;
 	}
 	
 	.select {
 		display: inline-block;
 		border: 1px solid #9966CC;
-		width: 150px;
 		height: 30px;
 		text-align: center;
 		border-radius: 50px;
 		padding-top: 5px;
-		margin: 20px;
 		color: #E6E6FA;
 		background-color: #9966CC;
 	}
@@ -144,8 +230,8 @@
 	#reset {
 		border: 2px dotted black;
 		border-radius: 50px;
-		padding: 5px;
-		width: 150px;
+		padding: 10px;
+		width: 100px;
 		cursor: pointer;
 		float: left;
 	}
@@ -173,7 +259,7 @@
 						<div th:each="val : ${skillList}" th:text="${val.skillname}" class="skillList"></div>
 					</div>
 					<div id="skillChoiceContainer"></div>
-					<div id="reset" class="inline-block">다시 선택할래요..</div>
+					<div id="reset" class="inline-block">다시 선택</div>
 				</div>
 				<input type="hidden" th:field="*{usersnumber}" name="usersnumber"/>
 				<input type="submit" class="inline-block button submit" value="수정완료"/>	
