FEAT : 유저 프로필 진행중

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,6 +6,7 @@
 <title>★SPACE★</title>
 </head>
 <body>
+ddd
 	<header th:fragment="header" class="headerBox" id="headerBox">
 		<div class="leftBox">
 			<a href="/">
