FEAT : 이미지 완료

--- a/src/main/resources/templates/board/boardReplace.html
+++ b/src/main/resources/templates/board/boardReplace.html
@@ -92,19 +92,32 @@
 }
 
 .boarduser > div {
-	width: 100px;
+	width: 150px;
 	height: 50px;
 	text-align: center;
+}
+
+#nameBox {
+	padding-top: 10px;
 }
 
 .boardNull {
 	height: 300px;
 }
 
-#usersnickname {
-	width: 70px;
+.image {
 	float: left;
-	margin-top: 20px;
+	width: 30px;
+	height: 30px;
+	border-radious: 5px;
+}
+
+#usersnickname {
+	width: 120px;
+	float: left;
+	padding-top: 10px;
+	font-weight: bold;
+	color: aqua;
 }
 
 #usercontainer {
@@ -174,8 +187,10 @@
 							</ul>
 							<hr>
 							<div class="boarduser">
-								<img th:src="|/image/${board.getStorefilename()}|" width="50" height="50" class="inline-block"/>
-								<p class="inline-block" id="usersnickname" th:text="${board.usersnickname}"></p>
+								<div class="inline-block" id="nameBox">
+									<img th:src="|/image/${board.getStorefilename()}|" width="50" height="50" class="inline-block image"/>
+									<p class="inline-block" id="usersnickname" th:text="${board.usersnickname}"></p>
+								</div>
 								<div class="inline-block" id="usercontainer">
 									<p class="inline-block">
 										<img class="img" src="../img/view.png">
