--- a/src/main/resources/templates/board/boardScroll.html
+++ b/src/main/resources/templates/board/boardScroll.html
@@ -88,19 +88,32 @@
 }
 
 .boarduser > div {
-	width: 100px;
+	width: 150px;
 	height: 50px;
 	text-align: center;
+}
+
+#nameBox {
+	padding-top: 10px;
 }
 
 .boardNull {
 	height: 300px;
 }
 
-#usersnickname {
-	width: 70px;
+.image {
 	float: left;
-	margin-top: 20px;
+	width: 30px;
+	height: 30px;
+	border-radious: 5px;
+}
+
+#usersnickname {
+	width: 120px;
+	float: left;
+	padding-top: 10px;
+	font-weight: bold;
+	color: aqua;
 }
 
 #usercontainer {
