--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -35,7 +35,7 @@
 .headerBox {
 	padding: 5px;
 	width: 80%;
-	height: 100px;
+	height: 150px;
 	margin: 0 auto;
 }
 
@@ -52,9 +52,10 @@
 }
 
 #nickname {
-	width: 95px;
+	width: 100px;
 	margin-left: 10px;
 	color: #7B68EE;
+	text-align: center;
 }
 
 .leftBox {
@@ -70,13 +71,14 @@
 }
 
 .rightBox {
-	width: 420px;
 	height: 100px;
 	float: right;
-	padding-right: 10px;
-	padding-top: 40px;
+	padding-top: 20px;
 	font-family: arial;
 	font-weight: 900;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .rightBox > div > a {
@@ -107,8 +109,17 @@
 
 #nick {
 	position: relative;
-	width: 170px;
+	width: 200px;
 	display: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-left: 20px;
+}
+
+.proimage {
+	border-radius: 5px;
+	border: 1px solid aqua;
 }
 
 .hideMenu {
