--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -202,6 +202,9 @@
 		text-align: left;
 		margin-bottom: 10px;
 		font-size: 20px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
 	}
 	
 	.layer2 p {
